# crypto-data-pipeline

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile.dashboard  Dockerfile.dbt  Dockerfile.pipeline  Makefile  README.md  alembic.ini  architecture.md  docker-compose.yml  format_code.py  main.py  profiles.yml  pyproject.toml  requirements-dashboard.txt  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 202508081555_initial_migration.py
config/: pyproject.toml  requirements-dashboard.txt
dashboard/: app.py
dashboard/pages/: 1_Data_Quality.py  2_Alert_System.py
dbt/: dbt_project.yml
dbt/macros/: get_crypto_symbols.sql  test_data_freshness.sql
dbt/models/marts/: mart_crypto_hourly_performance.sql  mart_crypto_latest_prices.sql  mart_pipeline_monitoring.sql
dbt/seeds/: crypto_prices_raw.csv  pipeline_runs.csv
docker/: Dockerfile.dashboard  Dockerfile.dbt  Dockerfile.pipeline  entrypoint.sh
grafana/: README.md
init-scripts/: 01-create-schemas.sql  02-create-users.sql
scripts/: __init__.py  format_code.py  main.py
src/: __init__.py  run_manual_extraction.py
src/config/: __init__.py  config_manager.py  settings.py
src/extractors/: __init__.py  crypto_extractor.py  secrets.py
src/loaders/: __init__.py  warehouse_loader.py
src/models/: __init__.py  schemas.py
src/monitoring/: health_monitor.py
src/pipeline/: orchestrator.py
src/scheduler/: __init__.py  job_scheduler.py
tests/: test_config.py  test_extractor.py  test_health_monitor.py  test_loader.py  test_orchestrator.py
(+56 files in other folders)
