[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_data_pipeline"
version = "0.1.0"
description = "Crypto Data Pipeline"
authors = [{ name = "Emmanuel Richard" }]
dependencies = []

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88
